--- a/Mission6AssignmentMJ/Views/Home/Movies.cshtml
+++ b/Mission6AssignmentMJ/Views/Home/Movies.cshtml
@@ -22,7 +22,12 @@
         <input asp-for="Director" /> <br />
 
         <label asp-for="Rating"> Rating: </label>
-        <input asp-for="Rating" /> <br />
+        <select asp-for="Rating">
+            <option value="G">G</option>
+            <option value="PG">PG</option>
+            <option value="PG-13">PG-13</option>
+            <option value="R">R</option>
+        </select> <br /> 
 
         <label asp-for="Edited"> Edited: </label>
         <select asp-for="Edited">
@@ -34,7 +39,7 @@
         <input asp-for="LentTo" /> <br />
 
         <label asp-for="Notes"> Notes: </label>
-        <input asp-for="Notes" /> <br />
+        <input asp-for="Notes" /> <br /> <br />
 
         <button type="submit">Submit Entry</button>
     </form>
