--- a/Mission6AssignmentMJ/Views/Home/Privacy.cshtml
+++ b/Mission6AssignmentMJ/Views/Home/Privacy.cshtml
@@ -3,4 +3,5 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<a href="https://baconsale.com/">View Bacon Sale</a>
+
