--- a/Mission6AssignmentMJ/Views/Home/Movies.cshtml
+++ b/Mission6AssignmentMJ/Views/Home/Movies.cshtml
@@ -9,8 +9,18 @@
 <p>Use this page to enter movies.</p>
 <div>
     <form method="post">
-        <label asp-for="Category"> Category: </label>
-        <input asp-for="Category" /> <br />
+
+        <div asp-validation-summary="All"></div> <!--Error Messages-->
+        <!-- <input asp-for="EntryID" type="hidden" /> -->
+
+        <label asp-for="CategoryID"> Category: </label>
+        <select asp-for="CategoryID">
+            <option value="">Select a category</option>
+            @foreach (Category c in ViewBag.Categories)
+            {
+                <option value="@c.CategoryID">@c.CategoryName</option>
+            }
+        </select> <br />
 
         <label asp-for="Title"> Title: </label>
         <input asp-for="Title" /> <br />
@@ -27,7 +37,7 @@
             <option value="PG">PG</option>
             <option value="PG-13">PG-13</option>
             <option value="R">R</option>
-        </select> <br /> 
+        </select> <br />
 
         <label asp-for="Edited"> Edited: </label>
         <select asp-for="Edited">
