--- a/Mission6AssignmentMJ/Views/Shared/_Layout.cshtml
+++ b/Mission6AssignmentMJ/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Movies">Movies</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AllEntry">Data</a>
+                        </li>
                     </ul>
                 </div>
             </div>
